<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/q1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/Q1"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/Q1_radio_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/Q1_A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:text="@string/Q1_Option1" />

                <RadioButton
                    android:id="@+id/Q1_A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:text="@string/Q1_Option2" />

                <RadioButton
                    android:id="@+id/Q1_A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:text="@string/Q1_Option3" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/Q2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:text="@string/Q2"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/Q2_radio_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:text="@string/Q2_Option1">

                <RadioButton
                    android:id="@+id/Q2_A1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:text="@string/Q2_Option1" />

                <RadioButton
                    android:id="@+id/Q2_A2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:text="@string/Q2_Option2" />

                <RadioButton
                    android:id="@+id/Q2_A3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:text="@string/Q2_Option3" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/Q3"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/Q3_A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:text="@string/Q3_Option1" />


                <CheckBox
                    android:id="@+id/Q3_A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:text="@string/Q3_Option2" />

                <CheckBox
                    android:id="@+id/Q3_A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:text="@string/Q3_Option3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Q4_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:text="@string/Q4"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/Q4EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text"
                    android:inputType="text" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/Q5_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:text="@string/Q5"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/Q5_radio_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/Q5_A1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:text="@string/Q5_Option1" />

                    <RadioButton
                        android:id="@+id/Q5_A2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:text="@string/Q5_Option2" />

                    <RadioButton
                        android:id="@+id/Q5_A3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:text="@string/Q5_Option3" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Q6_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:text="@string/Q6"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/Q6EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text"
                    android:inputType="text" />
            </LinearLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkAnswers"
                android:text="@string/button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
